# opengl_test

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
dep/glfw/tests/: inputlag  opacity
include/: Mesh.hpp  ShadeletSource.hpp  Shader.hpp  ShaderSource.hpp  Vertex.hpp
include/meshes/: MeshSquare.hpp
res/: shader_frag.glsl  shader_vert.glsl
src/: Mesh.cpp  OpenGLExtensions.cpp  ShadeletSource.cpp  Shader.cpp  ShaderSource.cpp  Vertex.cpp  main.cpp
src/meshes/: MeshSquare.cpp
